Code cleanup
QA-357